# Fibonacci_rust

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_fibonacci.rs  fuzz_parse_input.rs
src/: errors.rs  fibonacci.rs  io.rs  lib.rs  logger.rs  main.rs
tests/: e2e.rs  integration.rs
